added style.css to css folder and changed color of chat text based on player

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,14 @@ img{
 	color:red;
 }
 
+.chat-red-class{
+  color:red;
+}
+
+.chat-blue-class{
+  color:blue;
+}
+
 .clearfix{
   content: " ";
   display: block;
